--- a/main.html
+++ b/main.html
@@ -19,11 +19,11 @@
 	<p>We can say that optimization is one step further than the brute-force method of problem solving…</p>
 	
 	<img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height="200px"><br><br>
-    <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><h1>DSA vs. Competitive Programming</h1></a><br>
+    <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><h1>DSA vs. Competitive Programming</h1></a>
 	<p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a…</p><br>
 
 	<img src="https://images.unsplash.com/photo-1616469829581-73993eb86b02?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDJ8fGxpbmtlZGlufGVufDB8fHx8MTY3MDQ5MTYxNw&ixlib=rb-4.0.3&q=80&w=2000" height="200px"><br><br>
-	<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/"><h1>10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters</h1></a><br>
+	<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/"><h1>10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters</h1></a>
 	<p>As a job seeker, you may wonder how to make your LinkedIn profile stand out to recruiters. Your LinkedIn…</p>
 </p>
 
